Moved to the new template system.

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,16 @@
 	
 	"aliases" : {
 		"index:trees" : "file(data/world_generation/trees.json)",
-		"index:tree_templates" : "file(data/world_generation/tree_templates.json)",
+		
+		"template:default_tree" : "file(data/world_generation/tree_templates/default_tree.json)",
+		
+		"template:small_tree" : "file(data/world_generation/tree_templates/small_tree.json)",
+		"template:medium_tree" : "file(data/world_generation/tree_templates/medium_tree.json)",
+		"template:large_tree" : "file(data/world_generation/tree_templates/large_tree.json)",
+		
+		"template:foothill_juniper" : "file(data/world_generation/tree_templates/foothill_juniper.json)",
+		"template:mountain_juniper" : "file(data/world_generation/tree_templates/mountain_juniper.json)",
+		"template:oak" : "file(data/world_generation/tree_templates/oak.json)",
 		
 		"index:flowers" : "file(data/world_generation/flowers.json)",
 		"index:flower_templates" : "file(data/world_generation/flower_templates.json)"
