Added actions:think and actions:unthink
Both take one argument, "thought", which is the path to the thought.

--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,10 @@
 		"index:bushes" : "file(data/world_generation/bushes.json)",
 			"template:default_bush" : "file(data/world_generation/bush_templates/default_bush.json)",
 			
-		"index:camp_start" : "file(data/new_game/entities.json)"
+		"index:camp_start" : "file(data/new_game/entities.json)",
+		
+		"actions:think" : "file(ai/think.lua)",
+		"actions:unthink" : "file(ai/unthink.lua)"
 	},
 	
 	"functions" : {
