--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,8 @@
 {
-	"info" : { "name" : "Jelly™" },
+	"info" : { 
+		"name" : "Jelly™",
+		"version" : 1
+	},
 	
 	"server_init_script" : "file(jelly_server_init)",
 	
@@ -10,12 +13,10 @@
 			"template:small_tree" : "file(data/world_generation/tree_templates/small_tree.json)",
 			"template:medium_tree" : "file(data/world_generation/tree_templates/medium_tree.json)",
 			"template:large_tree" : "file(data/world_generation/tree_templates/large_tree.json)",
+			"template:ancient_tree" : "file(data/world_generation/tree_templates/ancient_tree.json)",
 			"template:foothill_juniper" : "file(data/world_generation/tree_templates/foothill_juniper.json)",
 			"template:mountain_juniper" : "file(data/world_generation/tree_templates/mountain_juniper.json)",
 			"template:oak" : "file(data/world_generation/tree_templates/oak.json)",
-		
-		"index:flowers" : "file(data/world_generation/flowers.json)",
-			"template:default_flower" : "file(data/world_generation/flower_templates/default_flower.json)",
 		
 		"index:bushes" : "file(data/world_generation/bushes.json)",
 			"template:default_bush" : "file(data/world_generation/bush_templates/default_bush.json)",
