Added some more debugging possibilities
Note that the CEF console is still to be preferred, however it may not be available/convenient for all types of things - so there's a function to print things from the JS side.

--- a/manifest.json
+++ b/manifest.json
@@ -31,6 +31,11 @@
 		"_get_server_data_store" : {
 			"controller" : "file(js_server.lua)",
 			"endpoint" : "server"
+		},
+		
+		"print" : {
+			"controller" : "file(js_server.lua)",
+			"endpoint" : "server"
 		}
 	},
 	
