Added jelly.store_data and jelly.get_data
This allows JS to store things on the lua state, which keeps persistent through UI reloads.

--- a/manifest.json
+++ b/manifest.json
@@ -36,6 +36,11 @@
 		"print" : {
 			"controller" : "file(js_server.lua)",
 			"endpoint" : "server"
+		},
+		
+		"store_data" : {
+			"controller" : "file(js_server.lua)",
+			"endpoint" : "server"
 		}
 	},
 	
